SERVER-19232 propagate errors back up the stack in NetworkInterfaceASIO